# finlactics_MAS

./: .env.example  .gitignore  README.md  pyproject.toml
src/: main.py  play_ground.py  test.py
src/Agents/: __init__.py  finance_agent.py  insights_agent.py  multi_agent.py  news_agent.py  web_agent.py
